// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar Snap render SearchBar -- props actionName 1`] = `
<div
  class="at-search-bar"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 0;"
  >
    actionName
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props className 1`] = `
<div
  class="at-search-bar test"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 0;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props customStyle 1`] = `
<div
  class="at-search-bar"
  style="color: red;"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 0;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props disabled 1`] = `
<div
  class="at-search-bar"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      disabled=""
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 0;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props fixed 1`] = `
<div
  class="at-search-bar at-search-bar--fixed"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 0;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props focus 1`] = `
<div
  class="at-search-bar"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 0;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 1; margin-right: 0px;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props inputType number 1`] = `
<div
  class="at-search-bar"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="number"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 0;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props maxLength 1`] = `
<div
  class="at-search-bar"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="120"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 0;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props placeholder 1`] = `
<div
  class="at-search-bar"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        placeholder
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 0;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props showActionButton 1`] = `
<div
  class="at-search-bar"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 1; margin-right: 0px;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render SearchBar -- props value 1`] = `
<div
  class="at-search-bar"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 0;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: hidden;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: flex;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 1; margin-right: 0px;"
  >
    Search
  </div>
</div>
`;

exports[`SearchBar Snap render initial SearchBar 1`] = `
<div
  class="at-search-bar"
>
  <div
    class="at-search-bar__input-cnt"
  >
    <div
      class="at-search-bar__placeholder-wrap"
      style="flex-grow: 1;"
    >
      <div
        class="at-icon at-icon-search"
      />
      <div
        class="at-search-bar__placeholder"
        style="visibility: visible;"
      >
        Search
      </div>
    </div>
    <input
      class="at-search-bar__input"
      maxlength="140"
      type="text"
    />
    <div
      class="at-search-bar__clear"
      style="display: none;"
    >
      <div
        class="at-icon at-icon-close-circle"
      />
    </div>
  </div>
  <div
    class="at-search-bar__action"
    style="opacity: 0;"
  >
    Search
  </div>
</div>
`;
